change color of highrating's header

--- a/notritionVendorsAPP/Controller/hightRating/view/CategoryCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/CategoryCell.xib
@@ -24,7 +24,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMC-os-7qg">
                                 <rect key="frame" x="0.0" y="176" width="190" height="20"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.32156862745098036" green="0.76862745098039209" blue="0.60392156862745094" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="uoq-lg-97c"/>
                                 </constraints>
