--- a/notritionVendorsAPP/Controller/detail food/view/AddCommentBtnCell.xib
+++ b/notritionVendorsAPP/Controller/detail food/view/AddCommentBtnCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddCommentBtn" id="KGk-i7-Jjw" customClass="AddCommentBtnCell" customModule="notritionVendorsAPP" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddCommentBtn" rowHeight="61" id="KGk-i7-Jjw" customClass="AddCommentBtnCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="318" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="318" height="60.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTt-CD-Kkl">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+                        <rect key="frame" x="10" y="10" width="298" height="40"/>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.65098039220000004" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="Zks-Xz-fOD"/>
@@ -31,17 +31,17 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nTt-CD-Kkl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0L7-ri-Vu5"/>
-                    <constraint firstAttribute="trailing" secondItem="nTt-CD-Kkl" secondAttribute="trailing" id="S9y-yc-3t8"/>
-                    <constraint firstItem="nTt-CD-Kkl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kkE-4F-TdU"/>
-                    <constraint firstAttribute="bottom" secondItem="nTt-CD-Kkl" secondAttribute="bottom" id="x1g-BT-Mjh"/>
+                    <constraint firstItem="nTt-CD-Kkl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="0L7-ri-Vu5"/>
+                    <constraint firstAttribute="trailing" secondItem="nTt-CD-Kkl" secondAttribute="trailing" constant="10" id="S9y-yc-3t8"/>
+                    <constraint firstItem="nTt-CD-Kkl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="kkE-4F-TdU"/>
+                    <constraint firstAttribute="bottom" secondItem="nTt-CD-Kkl" secondAttribute="bottom" constant="10" id="x1g-BT-Mjh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="addCmtBtn" destination="nTt-CD-Kkl" id="8Uc-pE-NK1"/>
             </connections>
-            <point key="canvasLocation" x="85" y="79"/>
+            <point key="canvasLocation" x="83.200000000000003" y="85.907046476761622"/>
         </tableViewCell>
     </objects>
 </document>
