--- a/notritionVendorsAPP/View/Comment.storyboard
+++ b/notritionVendorsAPP/View/Comment.storyboard
@@ -19,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pdB-I9-5AH">
-                                <rect key="frame" x="0.0" y="30" width="375" height="637"/>
+                                <rect key="frame" x="10" y="40" width="355" height="627"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Upk-4e-eqy">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="9Ai-lM-72o"/>
                                         </constraints>
@@ -31,7 +31,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mMO-Yw-BED">
-                                        <rect key="frame" x="0.0" y="40" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="40" width="355" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="7eI-ow-NoU"/>
                                         </constraints>
@@ -40,7 +40,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MZQ-bN-bfG" customClass="CosmosView" customModule="Cosmos">
-                                        <rect key="frame" x="0.0" y="80" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="80" width="355" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="QDZ-nw-Mm1"/>
@@ -70,7 +70,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g5G-r4-rmA">
-                                        <rect key="frame" x="0.0" y="120" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="120" width="355" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="4ks-sH-bdK"/>
                                         </constraints>
@@ -79,7 +79,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5ga-sV-NYl">
-                                        <rect key="frame" x="0.0" y="180" width="375" height="457"/>
+                                        <rect key="frame" x="0.0" y="180" width="355" height="447"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -94,10 +94,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="pdB-I9-5AH" firstAttribute="top" secondItem="hPl-Tf-PT1" secondAttribute="top" constant="10" id="88u-hq-wsA"/>
+                            <constraint firstItem="pdB-I9-5AH" firstAttribute="top" secondItem="hPl-Tf-PT1" secondAttribute="top" constant="20" id="88u-hq-wsA"/>
                             <constraint firstItem="hPl-Tf-PT1" firstAttribute="bottom" secondItem="pdB-I9-5AH" secondAttribute="bottom" id="SKS-CV-oy7"/>
-                            <constraint firstItem="pdB-I9-5AH" firstAttribute="leading" secondItem="hPl-Tf-PT1" secondAttribute="leading" id="mci-Kw-KhC"/>
-                            <constraint firstItem="pdB-I9-5AH" firstAttribute="trailing" secondItem="hPl-Tf-PT1" secondAttribute="trailing" id="xDf-Sw-Hgc"/>
+                            <constraint firstItem="pdB-I9-5AH" firstAttribute="leading" secondItem="hPl-Tf-PT1" secondAttribute="leading" constant="10" id="mci-Kw-KhC"/>
+                            <constraint firstItem="pdB-I9-5AH" firstAttribute="trailing" secondItem="hPl-Tf-PT1" secondAttribute="trailing" constant="-10" id="xDf-Sw-Hgc"/>
                             <constraint firstItem="pdB-I9-5AH" firstAttribute="centerX" secondItem="lIS-sc-prb" secondAttribute="centerX" id="xOk-2z-Euo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hPl-Tf-PT1"/>
